# etf_quant_pyf

./: .gitignore  README.md  pyproject.toml
configs/: backtest.yaml  baseline_equal_weight_hybrid.yaml  baseline_top2_annualized_hybrid.yaml  bigquant_rotation.yaml  bigquant_rotation_akshare.yaml  bigquant_rotation_hybrid.yaml  bigquant_rotation_hybrid_bucket_budget.yaml  bigquant_rotation_hybrid_candidate_take_profit.yaml  bigquant_rotation_hybrid_candidate_turnover.yaml  bigquant_rotation_hybrid_macro_overlay.yaml  bigquant_rotation_hybrid_position_cap.yaml  bigquant_rotation_hybrid_trend_budget.yaml  bigquant_rotation_hybrid_walk_forward.yaml  bigquant_rotation_tushare.yaml  bigquant_rotation_yahoo.yaml  global_etf_baseline_equal_weight_yahoo.yaml  global_etf_baseline_top2_annualized_yahoo.yaml  global_etf_bucket_budget_yahoo.yaml  global_etf_macro_risk_yahoo.yaml  global_etf_position_cap_yahoo.yaml  global_etf_rotation_yahoo.yaml  global_etf_trend_budget_yahoo.yaml  macro_credit_proxy_yahoo.yaml  pyf_global_etf_rotation_yahoo.yaml  rebalance.yaml  universe.yaml  walk_forward.yaml
configs/live/: bigquant_rotation_live_akshare.yaml
data/live/: app_state.json  performance_log.csv  positions.csv  positions_example.csv
demos/ios-mobile/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  local_app_product_requirements.md  macro_risk_plan.md
docs/changelog/: HANDOFF.md  (+6 more)
scripts/: app.sh  live_plan.sh
tests/: test_backtest_smoke.py  test_baselines.py  test_bigquant_rotation.py  test_live_rebalance.py  test_local_app.py  test_research_sweep.py  test_windows.py
(+43 files in other folders)
